add delete passkey button
Signed-off-by: Rick Henry <rickhenry@rickhenry.dev>

--- a/components/page.templ
+++ b/components/page.templ
@@ -27,7 +27,7 @@ templ Head() {
 }
 
 templ Body() {
-	<body class="flex flex-col h-full text-white bg-no-repeat bg-gradient-to-br from-indigo-800 bg-indigo-950 to-indigo-950 mx:auto" hx-boost="true">
+	<body class="flex flex-col h-full min-h-screen text-white bg-no-repeat bg-cover bg-gradient-to-br from-indigo-800 bg-indigo-950 to-indigo-950" hx-boost="true">
 		{ children... }
 		<footer class="pt-4 w-full text-white flex-0 max-w-screen">
 			<div class="flex flex-col justify-between items-center px-4 sm:flex-row sm:mx-auto sm:max-w-4xl max-w-screen">
