--- a/pages/todo_list.templ
+++ b/pages/todo_list.templ
@@ -13,13 +13,13 @@ templ TodoListPage(todos []database.Todo, csrf string, editID string) {
 			<form class="flex gap-0 w-full border-2 border-indigo-500 focus-within:border-white focus-within:ring-1 focus-within:ring-white focus:ring-offset-2 focus:ring-offset-black group"
 				method="post"
 				hx-post="/todos"
-				hx-swap="afterbegin swap:300ms"
+				hx-swap="afterbegin swap:305ms"
 				hx-target="#todo-list"
 				hx-on::before-request="try {document.getElementById('no-todos').remove()} catch (e) {}"
 				hx-on::after-request="this.reset()">
 				<input type="hidden" name="gorilla.csrf.Token" value={ csrf }/>
 				<label class="sr-only" for="todo">Add a new todo</label>
-				<input type="text" id="todo" name="todo" placeholder="Add a todo" class="flex-grow placeholder-indigo-500 text-white bg-transparent border-t-0 border-b-0 border-l-0 border-r-2 border-indigo-500 outline-black focus:border-white focus:ring-0 focus:outline-none focus:bg-white/10 focus:placeholder-white/80" autocomplete="off" />
+				<input type="text" id="todo" name="todo" placeholder="Add a todo" class="flex-grow placeholder-indigo-500 text-white bg-transparent border-t-0 border-b-0 border-l-0 border-r-2 border-indigo-500 outline-black focus:border-white focus:ring-0 focus:outline-none focus:bg-white/10 focus:placeholder-white/80" autocomplete="off" required />
 				<button type="submit"
 					class="flex gap-1 justify-center items-center py-2 px-4 text-lg font-semibold text-indigo-500 bg-transparent focus:ring-2 focus:ring-white focus:ring-offset-1 focus:outline-none group-focus-within:text-white hover:bg-white/20 focus:bg-white/20"
 				>
@@ -27,7 +27,7 @@ templ TodoListPage(todos []database.Todo, csrf string, editID string) {
 					@components.IconPlusCircle("-mr-1 w-5 h-5")
 				</button>
 			</form>
-			<ul class="flex flex-col gap-2 py-2" id="todo-list"
+			<ul class="flex flex-col py-2 space-y-2" id="todo-list"
 			style="min-height: 60svh"
 			>
 				for _, todo := range todos {
