--- a/static/input.css
+++ b/static/input.css
@@ -3,23 +3,23 @@
 @tailwind utilities;
 
 .todo-item {
-  transition: all 50ms ease-out;
-  ttransform: translateY(0);
+  height: 50px;
+  opacity: 1;
+  transition: all 300ms ease-out;
 }
 
-.htmx-added .todo-item {
-  @apply translate-y-full opacity-0;
-  transition: all 200ms ease-out;
-}
-
-.htmx-swapping > .todo-item {
-  transform: translateY(100%);
-  ransition: all 200ms ease-in;
+.htmx-added.todo-item {
+  opacity: 0;
+  margin: 0;
+  height: 0;
+  padding-block: 0;
 }
 
 .todo-item.htmx-swapping {
-  @apply opacity-0;
-  transition: all 200ms ease-in;
+  opacity: 0;
+  margin: 0;
+  height: 0;
+  padding-block: 0;
 }
 
 .todo-completed-button {
